--- a/gb/23/7/27/n14042890.md
+++ b/gb/23/7/27/n14042890.md
@@ -26,39 +26,39 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/28/n14024199.md#1">镜电视通过审查 在野批NCC公信力荡然无存</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/28/n14024201.md#1">台NCC通过镜电视上架86频道 最快7月可收看</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042214.md#1">募资电竞手机未经审验贩售 NCC开罚130万</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14042874.md#1">清冠一号带动就诊量 台卫福部首度通过动支3.13亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14042879.md#1">放任天使轮漏油 海保署首依新法限制船长等3人离境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14042882.md#1">秦刚遭免职 台外交部：对比初登场很讽刺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14042638.md#1">杜苏芮陆警扩大至苗栗 另一台风最快今晚生成</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064112.md#1">避免憾事重演 台铁借鉴日本改革经验</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064098.md#1">英国官员：骇客可藉AI达成未经授权的银行交易</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064095.md#1">高端技转世卫：再授权可获权利金</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064090.md#1">陈建仁：台湾生医受国际重视</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10698182.md#1" target="_blank">共产暴政录：中共在苏区杀人如麻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/10/n3655834.md#1" target="_blank">王华：闲谈西方的签名与东方的手印</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010192.md#1" target="_blank">共产暴政录：计划生育是毁我中华的屠婴战争（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11411173.md#1" target="_blank">美国会点名要求中共释放左洪涛 纽约声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14036151.md#1">释迦牟尼修得正果为何仍遭受果报？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030745.md#1">【古道人生】为什么他知道儿子是来讨债的？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/15/n14034619.md#1">人一定能战胜天？“人定胜天”这么多年你都解释错了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040988.md#1">女子过世时灵魂变光球离体 几天前曾见天使</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/19/n14038018.md#1">【未解之谜】深度解密：S4基地</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042513.md#1">【菁英论坛】秦刚案凸显习近平困境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042578.md#1">【新唐人快报】反制中共 美众院通过台湾团结法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040949.md#1">【未解之谜】特异功能大师 李有甫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041502.md#1">秦刚被免 王少军离奇死 习身边频发怪事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041224.md#1">失踪整一个月 秦刚被免外交部长职务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041808.md#1">王毅回锅任外长 学者分析：习被迫换掉秦刚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14041123.md#1">谢娜得奖感言疑踩雷 节目播出画面遭删剪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14041064.md#1">陆第一网红冯提莫消失半年 自曝患甲状腺癌晚期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041825.md#1">刀郎新歌《罗刹海市》刷屏 歌词曲风令人惊艳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041711.md#1">不服一审判刑13年 吴亦凡强奸案二审开庭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041756.md#1">直呼父子年龄相差大 古巨基盼儿子早婚早育</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040808.md#1">日本77岁老翁免费为台湾游客导览伊豆高原</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/21/n14039456.md#1">精神疾病病根在线粒体？哈佛教授：生酮饮食可改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040162.md#1">口疮让人苦不堪言？中医4招对付口腔溃疡、牙龈肿痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/22/n14040052.md#1">DNA受伤让人变老 易致癌 名医教你护DNA最佳方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040447.md#1">豆浆入菜的另类吃法：豆浆泡菜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063593.md#1">【新唐人快报】刘军被查 中超6任董事长全落马</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063446.md#1">【中国禁闻】外国律所中国化 前合规官透内情</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062941.md#1">王友群：曾庆红与习近平的对决上演了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062940.md#1">喊“5年不拍戏”挨轰 胡歌：我是个奇怪的人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062574.md#1">喝水可以减重吗？ 专家这么说</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061470.md#1">7种药食同源植物 有效预防和治疗新冠病毒</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/27/n14042890.htm">海峡电信涉诈仅罚30万 郑文灿认为应重罚</a></p><hr>
