--- a/gb/22/11/14/n13865732.md
+++ b/gb/22/11/14/n13865732.md
@@ -26,39 +26,39 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/7/n13861216.md#1">台教职等24类对象 14日起取消三剂令</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/9/n13862610.md#1">台疫情趋缓 戴口罩拟三阶段放宽</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/11/n13864226.md#1">口罩令松绑 王必胜：需观察三指标</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920956.md#1">三原因 室内戴口罩松绑暂缓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920962.md#1">促蛋鸡场设备升级 农委会提补助五成费用　</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920960.md#1">医估疫情感冒化不必打疫苗 王必胜：今年不会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920905.md#1">偏乡难领六千元 立委吁政府协助</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064112.md#1">避免憾事重演 台铁借鉴日本改革经验</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064095.md#1">高端技转世卫：再授权可获权利金</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064049.md#1">刺探法轮功  共谍判1年2个月</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064062.md#1">生态公会携手产、学、民共组国家队 台立委：国家发展不是零和竞争</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/21/n9981424.md#1" target="_blank">林辉：中共治下红楼泪 谁解其中味？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10879954.md#1" target="_blank">林辉：共产党国家的“作秀公审”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/1/13/n4615407.md#1" target="_blank">怪病神奇痊愈的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916753.md#1">目睹仓鼠死亡时灵魂上升 英女人生从此改观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916973.md#1">【未解之谜】神奇的测字</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913681.md#1">凡尘中人有仙缘 偶遇修道人出神通</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906270.md#1">玄——我亲历的故事（三）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920409.md#1">【热点互动】单方释访问消息 普京逼习上沉船？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920434.md#1">【秦鹏观察】三网友测鞋带吊人 宋祖德问真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920754.md#1">【全球新闻】布林肯访中 麦卡锡访台 中共划红线管用吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919422.md#1">美驻华大使馆推出贴图“鹰小美”引网友联想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918681.md#1">吴人晓：胡鑫宇案为何令人联想到谷开来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919336.md#1">分析：中共陷多事之秋 习近平新班底只能死撑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919533.md#1">40岁胡歌官宣已婚得女 透露妻子非公众人物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918977.md#1">梁朝伟高调进驻抖音 网友喊他千万别做一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919634.md#1">不怕变“胖冰” 范冰冰过年到京城街头享美食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13919017.md#1">终于完成18次抗癌治疗 朱芯仪直呼想哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920017.md#1">闻胡歌喜讯喊祝福 林依晨戏称彭于晏应该会困扰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914714.md#1">护心护肝又护肾 这种天然饮料有神奇功效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919945.md#1">美国富翁透露 有钱人如何用钱的8个秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918809.md#1">增强人体免疫力的9种自然方式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918579.md#1">你辗转难眠吗？ 试试专家分享的6个助眠方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/25/n13891656.md#1">上网轻松赚外快 利用10个免费网站兼差</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063593.md#1">【新唐人快报】刘军被查 中超6任董事长全落马</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063446.md#1">【中国禁闻】外国律所中国化 前合规官透内情</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062941.md#1">王友群：曾庆红与习近平的对决上演了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062940.md#1">喊“5年不拍戏”挨轰 胡歌：我是个奇怪的人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062574.md#1">喝水可以减重吗？ 专家这么说</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061470.md#1">7种药食同源植物 有效预防和治疗新冠病毒</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/14/n13865732.htm">台12/1起每周入境总数增至20万人</a></p><hr>
